Prevent scroll on Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   color: #fafafa;
+  position: fixed;
 }
 
 #app {
